Vanila Redux Learing

--- a/public/index3.html
+++ b/public/index3.html
@@ -10,11 +10,16 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>Vanilla Redux</title>
+    <title>React App</title>
 </head>
 
 <body>
-    <div id="root"></div>
+    <h1> To Dos</h1>
+    <form>
+        <input type="text" placeholder="Write To do" />
+        <button>Add</button>
+    </form>
+    <ul></ul>
 </body>
 
 </html>
